--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -36,11 +36,11 @@
 
             <meta-data
                 android:name="android.support.wearable.complications.SUPPORTED_TYPES"
-                android:value="SMALL_IMAGE" />
+                android:value="RANGED_VALUE,SHORT_TEXT,LONG_TEXT" />
 
             <meta-data
                 android:name="android.support.wearable.complications.UPDATE_PERIOD_SECONDS"
-                android:value="600" />
+                android:value="0" />
         </service>
         <receiver android:name=".ComplicationTapBroadcastReceiver" />
     </application>
